--- a/4thYearAppliedProject/MainPage.xaml
+++ b/4thYearAppliedProject/MainPage.xaml
@@ -12,7 +12,7 @@
             <AppBarButton x:Name="LoginAppBarBtn" Padding="10,10,10,10" Icon="Accept" Label="Login" VerticalAlignment="Top" RenderTransformOrigin="0.49,1.495">
                 <AppBarButton.Flyout>
                     <Flyout>
-                        <StackPanel x:Name="LoginStk" Background="Beige">
+                        <StackPanel x:Name="LoginStk" Background="Tan">
                             <TextBlock Text="Username: " />
                             <TextBox x:Name ="txtUsername" Text=" " />
                             <TextBlock Text="Password: " />
@@ -26,7 +26,7 @@
             <AppBarButton x:Name="SignUpAppBarBtn" Padding="10,10,10,10" HorizontalAlignment="Center" Icon="Add" Label="Sign-up" VerticalAlignment="Top">
                 <AppBarButton.Flyout>
                     <Flyout>
-                        <StackPanel x:Name="SigninStk" Background="Beige">
+                        <StackPanel x:Name="SigninStk" Background="Tan">
                             <TextBlock Text="Username: " />
                             <TextBox x:Name ="txtNewUsername" Text=" " />
                             <TextBlock Text="Email: " />
