--- a/4thYearAppliedProject/MainPage.xaml
+++ b/4thYearAppliedProject/MainPage.xaml
@@ -11,13 +11,13 @@
         <StackPanel Orientation="Horizontal">
             <AppBarButton x:Name="LoginAppBarBtn" Padding="10,10,10,10" Icon="Accept" Label="Login" VerticalAlignment="Top" RenderTransformOrigin="0.49,1.495">
                 <AppBarButton.Flyout>
-                    <Flyout>
+                    <Flyout x:Name="loginFlyout">
                         <StackPanel x:Name="LoginStk" Background="Tan">
                             <TextBlock Text="Username: " />
                             <TextBox x:Name ="txtUsername" Text=" " />
                             <TextBlock Text="Password: " />
                             <TextBox x:Name="txtPassword" Text=" " />
-                            <Button x:Name="btnOk" Content="Ok" Margin="10,10,10,10" VerticalAlignment="Bottom" Background="Gray" Click="btnOk_Click" IsEnabled="True" Height="40" Width="120"/>
+                            <Button x:Name="btnLoginOk" Content="Ok" Margin="10,10,10,10" VerticalAlignment="Bottom" Background="Gray" Click="btnLoginOk_Click" IsEnabled="True" Height="40" Width="120"/>
                             <Button x:Name="btnCancel" Content="Cancel" HorizontalAlignment="Right" Margin="10,10,10,10" VerticalAlignment="Bottom" Background="Gray" Click="btnCancel_Click" IsEnabled="True" Height="40" Width="120"/>
                         </StackPanel>
                     </Flyout>
@@ -25,8 +25,8 @@
             </AppBarButton>
             <AppBarButton x:Name="SignUpAppBarBtn" Padding="10,10,10,10" HorizontalAlignment="Center" Icon="Add" Label="Sign-up" VerticalAlignment="Top">
                 <AppBarButton.Flyout>
-                    <Flyout>
-                        <StackPanel x:Name="SigninStk" Background="Tan">
+                    <Flyout x:Name="signupFlyout">
+                        <StackPanel x:Name="SignupStk" Background="Tan">
                             <TextBlock Text="Username: " />
                             <TextBox x:Name ="txtNewUsername" Text=" " />
                             <TextBlock Text="Email: " />
